--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     margin: 0;
     font-family: 'Noto Sans Vai', sans-serif;
 }
+body {
+    background-color: rgb(15, 14, 14);
+    color: white;
+}
 
 a:visited {
     text-decoration: none;
@@ -42,18 +46,38 @@ nav li {
     display: flex;
     align-self: center;
     justify-content: space-between;
-
+    margin: 0 30px 10px 30px;
 }
 .flex-hero p {
     margin-bottom: 28px;
 }
 
-
 .child1 {
     margin: auto
 }
-
-body {
-    background-color: black;
-    color: white;
+.flex-about-me {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    background-color: white;
+    text-align: center;
+    margin: 0 100px 60px 100px;
+    gap: 30px;
+    padding: 15px;
 }
+.projects-container {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 30px;
+    height: calc(100vh - 10px);
+    margin-right: auto;
+}
+.flex-artical {
+    display: flex;
+    justify-content: space-between;
+    gap: 109px;
+    margin-bottom: 30px;
+}
+
+
+
