--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,20 @@
     margin: 0;
     font-family: 'Noto Sans Vai', sans-serif;
 }
+
 body {
     background-color: rgb(15, 14, 14);
     color: white;
 }
 
-a:visited {
+nav a , footer a {
     text-decoration: none;
     color: white
 }
 
 header {
-    background-color: rgba(124, 124, 125, 0.518);
-    border-bottom: 1px solid white;
+    /* background-color: rgba(124, 124, 125, 0.518); */
+    /* border-bottom: 1px solid white; */
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
@@ -25,21 +26,44 @@ header h1 {
     font-size: 80px;
     font-weight: normal;
     margin-left: 40px;
+    position: absolute
 }
+
 h2 {
     font-size: xx-large;
     margin-left: 13px;
     font-weight: bolder;
     font-size: 70px;
+    text-transform: uppercase;
+}
+
+h3 {
+    text-align: center;
+    size: 10px;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+h4 {
+    text-align: center;
+}
+h4 a {
+    background-color: white;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 nav {
     align-self: center;
 }
+nav ul{
+    padding: 10px;
+
+}
 
 nav li {
     display: inline;
-    margin: 40px;
+    padding: 8px 10px;
+  
 }
 
 .flex-hero {
@@ -48,6 +72,7 @@ nav li {
     justify-content: space-between;
     margin: 0 30px 10px 30px;
 }
+
 .flex-hero p {
     margin-bottom: 28px;
 }
@@ -55,29 +80,43 @@ nav li {
 .child1 {
     margin: auto
 }
+
 .flex-about-me {
     display: flex;
     flex-direction: column;
     color: black;
     background-color: white;
     text-align: center;
-    margin: 0 100px 60px 100px;
+    margin: 0 100px 80px 100px;
     gap: 30px;
     padding: 15px;
+    border-radius: 10px;
 }
-.projects-container {
+
+
+.grid-container{
     display: grid;
-    grid-template-columns: auto;
-    gap: 30px;
-    height: calc(100vh - 10px);
-    margin-right: auto;
+    gap:20px;
+    margin-bottom: 30px;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 50px 30px 50px;
+    
 }
-.flex-artical {
+.grid-container :first-child{
+    grid-column: span 2;
+}
+.flex-footer {
     display: flex;
     justify-content: space-between;
-    gap: 109px;
-    margin-bottom: 30px;
+    height: 50px;
+   align-items: center;
+   margin: 0 20px 0 20px;
+
 }
+.flex-footer li {
+    display: inline;
+    margin:40px;
+    
 
-
-
+}
