--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,6 @@ nav a , footer a {
 }
 
 header {
-    /* background-color: rgba(124, 124, 125, 0.518); */
-    /* border-bottom: 1px solid white; */
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
@@ -45,6 +43,7 @@ h3 {
 }
 h4 {
     text-align: center;
+    margin-bottom: 60px;
 }
 h4 a {
     background-color: white;
@@ -97,14 +96,38 @@ nav li {
 .grid-container{
     display: grid;
     gap:20px;
-    margin-bottom: 30px;
     justify-items: center;
-    grid-template-columns: 1fr 1fr;
-    margin: 0 50px 30px 50px;
+    justify-items: stretch;
+    margin: 0 50px 100px 50px;
     
+    
+}
+.grid-container > * {
+    height: 500px;
+    background-size: cover;
+    background-position: center;
+    border: 1px solid white;
+    
+
 }
 .grid-container :first-child{
     grid-column: span 2;
+   
+}
+.img1 {
+    background-image:url(/assets/placeholder1.webp);
+}
+.img2 {
+    background-image: url(/assets/placeholder2.webp);
+}
+.img3{
+    background-image: url(/assets/placeholder3.webp);
+}
+.img4{
+    background-image: url(/assets/placeholder4.webp);
+}
+.img5{
+    background-image: url(/assets/placeholder5.webp);
 }
 .flex-footer {
     display: flex;
@@ -117,6 +140,4 @@ nav li {
 .flex-footer li {
     display: inline;
     margin:40px;
-    
-
 }
