--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,47 @@ header h1 {
 
 }
 
+h2 {
+    display: grid;
+    color: white;
+    position: relative;
+  }
+  
+  h2 .typewriter {
+    width: 11ch;
+    animation: 
+      typing 2s steps(11),
+      blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 1em;
+    position: absolute;
+    top:35px;
+    left: 20px;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  }
+      
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
+
 .hero {
-   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
     justify-items: center;
     height: 800px;
     align-items: center;
+    
 }
 
 
@@ -45,9 +79,10 @@ header h1 {
     display: block;
     font-size: 20px;
 }
+
 .hero .name {
     font-size: 50px;
-    margin-left: 50px;
+    
 }
 
 h3 {
@@ -81,14 +116,15 @@ nav ul {
 
 nav li {
     display: inline;
-    padding: 8px 10px;
+    padding: 8px 20px;
 
 }
 
 .hero {
     background: transparent url(/assets/profilepic.png) no-repeat;
-    background-position: right -50px;
+    background-position: right 0px;
     margin-bottom: 60px;
+
 }
 
 
@@ -151,7 +187,7 @@ nav li {
 
 .flex-footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     height: 50px;
     align-items: center;
     margin: 0 20px 0 20px;
