added about me section

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
 }
 
-/* other header styling */
+/* other-header styling */
 h3 {
     text-align: center;
     size: 10px;
